# ipum_vector_database

./: .gitignore  README.md
doc/: HOMEWORK.md  LAB_INSTRUCTION.md
lab_02_vector_databases/: README.md  lab_conDB__SqlAlchemy.html  lab_conDB__SqlAlchemy.ipynb  pyproject.toml
lab_02_vector_databases/rag/: rag.html  rag.ipynb
lab_02_vector_databases/rag/data/: Przewodnik-po-sztucznej-inteligencji-2024_IAB-Polska-Embeddings.json
lab_02_vector_databases/sql_alchemy/: db_con.py  db_queries.py  db_queries_model.py  db_table.py  download_game.py  load_sentence_model.py  main.py
lab_02_vector_databases/vectorscale_db/: docker-compose.yml
